// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudEventCustomHeadersEditor tests Add headers 1`] = `
<ForwardRef>
  <div
    data-ouia-component-type="custom-headers-editor"
    data-ouia-safe={true}
  >
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem>
          <div
            className="pf-l-stack__item"
          >
            <Button
              icon={
                <PlusCircleIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              }
              isInline={true}
              key="add-header-button"
              onClick={[Function]}
              variant="link"
            >
              <ButtonBase
                icon={
                  <PlusCircleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                innerRef={null}
                isInline={true}
                onClick={[Function]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  type="button"
                >
                  <span
                    className="pf-c-button__icon pf-m-start"
                  >
                    <PlusCircleIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                        />
                      </svg>
                    </PlusCircleIcon>
                  </span>
                  Add Header
                </button>
              </ButtonBase>
            </Button>
          </div>
        </StackItem>
        <StackItem>
          <div
            className="pf-l-stack__item"
          >
            <Grid
              data-ouia-component-id="custom-headers-editor-grid"
              data-ouia-component-type="custom-headers-editor"
              data-ouia-safe={true}
            >
              <div
                className="pf-l-grid"
                data-ouia-component-id="custom-headers-editor-grid"
                data-ouia-component-type="custom-headers-editor"
                data-ouia-safe={true}
              >
                <GridItem
                  key="headers-grid-col-header"
                  span={4}
                >
                  <div
                    className="pf-l-grid__item pf-m-4-col"
                  >
                    <h4>
                      Header Name
                    </h4>
                  </div>
                </GridItem>
                <GridItem
                  key="headers-grid-col-value"
                  span={8}
                >
                  <div
                    className="pf-l-grid__item pf-m-8-col"
                  >
                    <h4>
                      Value
                    </h4>
                  </div>
                </GridItem>
                <GridItem
                  key="header-key-0"
                  span={4}
                >
                  <div
                    className="pf-l-grid__item pf-m-4-col"
                  >
                    <TextInput
                      autoFocus={false}
                      id="header-key-0-input"
                      onChange={[Function]}
                      value="key"
                    >
                      <TextInputBase
                        aria-label={null}
                        autoFocus={false}
                        className=""
                        id="header-key-0-input"
                        innerRef={null}
                        isDisabled={false}
                        isIconSprite={false}
                        isLeftTruncated={false}
                        isReadOnly={false}
                        isRequired={false}
                        onChange={[Function]}
                        ouiaSafe={true}
                        type="text"
                        validated="default"
                        value="key"
                      >
                        <input
                          aria-invalid={false}
                          aria-label={null}
                          autoFocus={false}
                          className="pf-c-form-control"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                          data-ouia-component-type="PF4/TextInput"
                          data-ouia-safe={true}
                          disabled={false}
                          id="header-key-0-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={false}
                          type="text"
                          value="key"
                        />
                      </TextInputBase>
                    </TextInput>
                  </div>
                </GridItem>
                <GridItem
                  key="header-value-0"
                  span={7}
                >
                  <div
                    className="pf-l-grid__item pf-m-7-col"
                  >
                    <TextInput
                      id="header-value-0-input"
                      onChange={[Function]}
                      value="value"
                    >
                      <TextInputBase
                        aria-label={null}
                        className=""
                        id="header-value-0-input"
                        innerRef={null}
                        isDisabled={false}
                        isIconSprite={false}
                        isLeftTruncated={false}
                        isReadOnly={false}
                        isRequired={false}
                        onChange={[Function]}
                        ouiaSafe={true}
                        type="text"
                        validated="default"
                        value="value"
                      >
                        <input
                          aria-invalid={false}
                          aria-label={null}
                          className="pf-c-form-control"
                          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                          data-ouia-component-type="PF4/TextInput"
                          data-ouia-safe={true}
                          disabled={false}
                          id="header-value-0-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={false}
                          type="text"
                          value="value"
                        />
                      </TextInputBase>
                    </TextInput>
                  </div>
                </GridItem>
                <GridItem
                  key="header-delete-0"
                  span={1}
                >
                  <div
                    className="pf-l-grid__item pf-m-1-col"
                  >
                    <Button
                      aria-label="delete"
                      key="header-delete-0-button"
                      onClick={[Function]}
                      variant="plain"
                    >
                      <ButtonBase
                        aria-label="delete"
                        innerRef={null}
                        onClick={[Function]}
                        variant="plain"
                      >
                        <button
                          aria-disabled={false}
                          aria-label="delete"
                          className="pf-c-button pf-m-plain"
                          data-ouia-component-id="OUIA-Generated-Button-plain-1"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          onClick={[Function]}
                          role={null}
                          type="button"
                        >
                          <TrashIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                              />
                            </svg>
                          </TrashIcon>
                        </button>
                      </ButtonBase>
                    </Button>
                  </div>
                </GridItem>
              </div>
            </Grid>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</ForwardRef>
`;

exports[`CloudEventCustomHeadersEditor tests Snapshot - empty 1`] = `
<ForwardRef>
  <div
    data-ouia-component-type="custom-headers-editor"
    data-ouia-safe={true}
  >
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem>
          <div
            className="pf-l-stack__item"
          >
            <Button
              icon={
                <PlusCircleIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              }
              isInline={true}
              key="add-header-button"
              onClick={[Function]}
              variant="link"
            >
              <ButtonBase
                icon={
                  <PlusCircleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                innerRef={null}
                isInline={true}
                onClick={[Function]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[Function]}
                  role={null}
                  type="button"
                >
                  <span
                    className="pf-c-button__icon pf-m-start"
                  >
                    <PlusCircleIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                        />
                      </svg>
                    </PlusCircleIcon>
                  </span>
                  Add Header
                </button>
              </ButtonBase>
            </Button>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</ForwardRef>
`;
